:sparkles: Feat: Add shell commands for seeding admin and payment methods; implement ShellAdminSeeder and ShellSriMethdsSeeder for initializing data, and update application properties for shell command configuration.