@@ -1,4 +1,4 @@
-package com.foryourlife.admin.auth.seeders;
+package com.foryourlife.shared.domain.shellCommands;
 
 import com.foryourlife.admin.auth.domain.Admin;
 import com.foryourlife.admin.auth.domain.AdminRepository;
@@ -9,7 +9,6 @@ import com.foryourlife.admin.programs.trainer.application.TrainerCreatorService;
 import com.foryourlife.admin.programs.trainer.domain.Trainer;
 import com.foryourlife.admin.programs.training.application.CommandTrainingService;
 import com.foryourlife.admin.programs.training.infrastructure.httpControllers.TrainingAutoGenerateRequest;
-import com.foryourlife.admin.sales.product.domain.Product;
 import com.foryourlife.admin.sales.product.domain.ProductRepository;
 import com.foryourlife.admin.sales.programs.domain.Program;
 import com.foryourlife.admin.sales.programs.domain.ProgramRepository;
@@ -17,12 +16,12 @@ import com.foryourlife.clients.account.contact.infrastructure.httpControllers.Sa
 import com.foryourlife.clients.account.invitations.applications.CommandInvitationService;
 import com.foryourlife.clients.account.invitations.applications.QueryInvitationServices;
 import com.foryourlife.clients.account.invitations.infrastructure.InvitationRequest;
-import com.foryourlife.clients.account.participantLevel.domain.ParticipantLevel;
-import com.foryourlife.clients.account.participantLevel.domain.ParticipantLevelRepository;
-import com.foryourlife.clients.account.profileDetails.infrastructure.ProfileDetailRequest;
 import com.foryourlife.clients.account.participant.application.ParticipantCommandService;
 import com.foryourlife.clients.account.participant.domain.Participant;
 import com.foryourlife.clients.account.participant.infrastructure.httpControllers.MedicalRecordSaveRequest;
+import com.foryourlife.clients.account.participantLevel.domain.ParticipantLevel;
+import com.foryourlife.clients.account.participantLevel.domain.ParticipantLevelRepository;
+import com.foryourlife.clients.account.profileDetails.infrastructure.ProfileDetailRequest;
 import com.foryourlife.masterLife.application.CommandMasterLifeService;
 import com.foryourlife.masterLife.domain.MasterLife;
 import com.foryourlife.shared.domain.level.CourseLevel;
@@ -34,10 +33,10 @@ import com.foryourlife.staff.domain.Staff;
 import com.foryourlife.visionary.application.VisionaryCreatorService;
 import com.foryourlife.visionary.domain.Visionary;
 import net.datafaker.Faker;
-import org.springframework.boot.CommandLineRunner;
-import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.shell.standard.ShellComponent;
+import org.springframework.shell.standard.ShellMethod;
+import org.springframework.stereotype.Service;
 
 import java.sql.Date;
 import java.time.LocalDate;
@@ -46,12 +45,12 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.UUID;
 
-@Configuration
-public class AdminSeeder {
+@ShellComponent
+@Service
+public class ShellAdminSeeder {
     private final AdminRepository repository;
     private final PasswordEncoder passwordEncoder;
     private final ProgramRepository programRepository;
-    private final ProductRepository productRepository;
     private final CampusRepository campusRepository;
     private final TrainerCreatorService trainerCreatorService;
     private final CommandTrainingService commandTrainingService;
@@ -64,9 +63,10 @@ public class AdminSeeder {
     private final ParticipantLevelRepository participantLevelRepository;
     private final Faker faker = new Faker();
 
-    public AdminSeeder(AdminRepository repository, ProductRepository productRepository, ProgramRepository programRepository, PasswordEncoder passwordEncoder, CampusRepository campusRepository, TrainerCreatorService trainerCreatorService, CommandTrainingService commandTrainingService, StaffCreatorService staffCreatorService, VisionaryCreatorService visionaryCreatorService, ParticipantCommandService participantCommandService, CommandMasterLifeService commandMasterLifeService, CommandInvitationService commandInvitationService, QueryInvitationServices queryInvitationServices, ParticipantLevelRepository participantLevelRepository) {
+    public ShellAdminSeeder(AdminRepository repository, PasswordEncoder passwordEncoder, ProgramRepository programRepository, CampusRepository campusRepository, TrainerCreatorService trainerCreatorService, CommandTrainingService commandTrainingService, StaffCreatorService staffCreatorService, VisionaryCreatorService visionaryCreatorService, ParticipantCommandService participantCommandService, CommandMasterLifeService commandMasterLifeService, CommandInvitationService commandInvitationService, QueryInvitationServices queryInvitationServices, ParticipantLevelRepository participantLevelRepository) {
         this.repository = repository;
         this.passwordEncoder = passwordEncoder;
+        this.programRepository = programRepository;
         this.campusRepository = campusRepository;
         this.trainerCreatorService = trainerCreatorService;
         this.commandTrainingService = commandTrainingService;
@@ -77,38 +77,24 @@ public class AdminSeeder {
         this.commandInvitationService = commandInvitationService;
         this.queryInvitationServices = queryInvitationServices;
         this.participantLevelRepository = participantLevelRepository;
-        this.productRepository = productRepository;
-        this.programRepository = programRepository;
     }
 
-    @Bean
-    CommandLineRunner initAdmin() {
-        return args -> {
-            List<Campus> campuses = List.of(Campus.create("61d88b2a-a22e-4cb0-8e43-e036483039d6", "Ecuador", "Quito", "De los Cedros OE1-13 y Real Audiencia", "094456123"), Campus.create("01a680a4-3bf6-4caf-98b8-f3d5c7a8811b", "Ecuador", "Guayaquil", "Alborada etapa 14 manzana 5", "094456123"), Campus.create("a35d480e-f17a-4b5c-887e-2ba9ddd3b696", "Ecuador", "Cuenca", "Por definir", "094456123"));
-            campusRepository.save(campuses.get(0));
-            campusRepository.save(campuses.get(1));
-            campusRepository.save(campuses.get(2));
-            repository.save(new Admin("3936ae5e-0cc1-4375-abc7-520d16999110", new User("72efe963-52b5-439a-ada2-3ea7b0258b89", "diegofyl@admin.com", passwordEncoder.encode("FocusYourLife2025--"), "DIEGO", "", "FYL", "", "Diego FYL", "0999999999", List.of(new UserEntities("3936ae5e-0cc1-4375-abc7-520d16999110", "ADMIN"))), new AdminRole("f4dddf05-8fec-4551-8d93-d6309c17c206", "Gerente", "ROLE_ADMIN"), new HashSet<>(campusRepository.getAll()), true));
-            repository.save(new Admin("1a34e4df-33fa-4078-9acd-df7d04dde5f4", new User("93030dda-f43f-44bb-a500-991cda675aa7", "jairo@admin.com", passwordEncoder.encode("FocusYourLife2025--"), "JAIRO", "", "FYL", "", "Jairo FYL", "0999999999", List.of(new UserEntities("3936ae5e-0cc1-4375-abc7-520d16999110", "ADMIN"))), new AdminRole("f4dddf05-8fec-4551-8d93-d6309c17c206", "Gerente", "ROLE_ADMIN"), new HashSet<>(campusRepository.getAll()), true));
-            repository.save(new Admin("b85430d1-e9fc-4c8d-8dd0-6c483511f0b8", new User("4f158ff7-3584-4c1b-abce-d1cbee0ced26", "katy@admin.com", passwordEncoder.encode("FocusYourLife2025--"), "KATY", "", "FYL", "", "Katy FYL", "0999999999", List.of(new UserEntities("3936ae5e-0cc1-4375-abc7-520d16999110", "ADMIN"))), new AdminRole("f4dddf05-8fec-4551-8d93-d6309c17c206", "Gerente", "ROLE_ADMIN"), new HashSet<>(List.of(campuses.get(2))), true));
-            List<ParticipantLevel> roles = Arrays.asList(ParticipantLevel.create("6642e863-7f6f-40a3-80e2-934388ade735", "ROLE_INIT", true, CourseLevel.INIT), ParticipantLevel.create("3024c8f1-d603-47fc-8369-0e90cd2e703e", "ROLE_FOCUS", false, CourseLevel.FOCUS), ParticipantLevel.create("55c3da1c-b516-4a55-9fdd-21317ee6e4c0", "ROLE_YOUR", false, CourseLevel.YOUR), ParticipantLevel.create("5b2da953-9791-47e6-a5b8-3442b52b8ebc", "ROLE_LIFE", false, CourseLevel.LIFE), ParticipantLevel.create("797eb700-4a0c-4334-a9c0-5eb5de18b1b9", "ROLE_GRADUATE", false, CourseLevel.LIFE_GRADUATE));
-            this.participantLevelRepository.saveAll(roles);
-            createAdminTestUser();
+    @ShellMethod(key = "app:seed-admins")
+    private void seedAdmins() {
+        List<Campus> campuses = List.of(Campus.create("61d88b2a-a22e-4cb0-8e43-e036483039d6", "Ecuador", "Quito", "De los Cedros OE1-13 y Real Audiencia", "094456123"), Campus.create("01a680a4-3bf6-4caf-98b8-f3d5c7a8811b", "Ecuador", "Guayaquil", "Alborada etapa 14 manzana 5", "094456123"), Campus.create("a35d480e-f17a-4b5c-887e-2ba9ddd3b696", "Ecuador", "Cuenca", "Por definir", "094456123"));
+        campusRepository.save(campuses.get(0));
+        campusRepository.save(campuses.get(1));
+        campusRepository.save(campuses.get(2));
+        repository.save(new Admin("3936ae5e-0cc1-4375-abc7-520d16999110", new User("72efe963-52b5-439a-ada2-3ea7b0258b89", "diegofyl@admin.com", passwordEncoder.encode("FocusYourLife2025--"), "DIEGO", "", "FYL", "", "Diego FYL", "0999999999", List.of(new UserEntities("3936ae5e-0cc1-4375-abc7-520d16999110", "ADMIN"))), new AdminRole("f4dddf05-8fec-4551-8d93-d6309c17c206", "Gerente", "ROLE_ADMIN"), new HashSet<>(campusRepository.getAll()), true));
+        repository.save(new Admin("1a34e4df-33fa-4078-9acd-df7d04dde5f4", new User("93030dda-f43f-44bb-a500-991cda675aa7", "jairo@admin.com", passwordEncoder.encode("FocusYourLife2025--"), "JAIRO", "", "FYL", "", "Jairo FYL", "0999999999", List.of(new UserEntities("3936ae5e-0cc1-4375-abc7-520d16999110", "ADMIN"))), new AdminRole("f4dddf05-8fec-4551-8d93-d6309c17c206", "Gerente", "ROLE_ADMIN"), new HashSet<>(campusRepository.getAll()), true));
+        repository.save(new Admin("b85430d1-e9fc-4c8d-8dd0-6c483511f0b8", new User("4f158ff7-3584-4c1b-abce-d1cbee0ced26", "katy@admin.com", passwordEncoder.encode("FocusYourLife2025--"), "KATY", "", "FYL", "", "Katy FYL", "0999999999", List.of(new UserEntities("3936ae5e-0cc1-4375-abc7-520d16999110", "ADMIN"))), new AdminRole("f4dddf05-8fec-4551-8d93-d6309c17c206", "Gerente", "ROLE_ADMIN"), new HashSet<>(List.of(campuses.get(2))), true));
+        List<ParticipantLevel> roles = Arrays.asList(ParticipantLevel.create("6642e863-7f6f-40a3-80e2-934388ade735", "ROLE_INIT", true, CourseLevel.INIT), ParticipantLevel.create("3024c8f1-d603-47fc-8369-0e90cd2e703e", "ROLE_FOCUS", false, CourseLevel.FOCUS), ParticipantLevel.create("55c3da1c-b516-4a55-9fdd-21317ee6e4c0", "ROLE_YOUR", false, CourseLevel.YOUR), ParticipantLevel.create("5b2da953-9791-47e6-a5b8-3442b52b8ebc", "ROLE_LIFE", false, CourseLevel.LIFE), ParticipantLevel.create("797eb700-4a0c-4334-a9c0-5eb5de18b1b9", "ROLE_GRADUATE", false, CourseLevel.LIFE_GRADUATE));
+        this.participantLevelRepository.saveAll(roles);
+        createAdminTestUser();
 
-            List<Program> programs = Arrays.asList(Program.create("55c3da1c-b516-4a55-9fdd-21317ee6e4c0", "Focus", CourseLevel.FOCUS), Program.create("bff32809-d719-4dfd-90b0-6f7a0f63e2fe", "Your", CourseLevel.YOUR), Program.create("3024c8f1-d603-47fc-8369-0e90cd2e703e", "Life", CourseLevel.LIFE));
+        List<Program> programs = Arrays.asList(Program.create("55c3da1c-b516-4a55-9fdd-21317ee6e4c0", "Focus", CourseLevel.FOCUS), Program.create("bff32809-d719-4dfd-90b0-6f7a0f63e2fe", "Your", CourseLevel.YOUR), Program.create("3024c8f1-d603-47fc-8369-0e90cd2e703e", "Life", CourseLevel.LIFE));
 
-            this.programRepository.saveAll(programs);
-            //mock();
-        };
-    }
-
-    private void mock() {
-        makeTrainer();
-        makePrograms();
-        makeStaffs();
-        makeVisionaries();
-        makeMasterLife();
-        makeParticipants();
+        this.programRepository.saveAll(programs);
     }
 
     private void createAdminTestUser() {
@@ -119,6 +105,17 @@ public class AdminSeeder {
             }
         }
     }
+
+    @ShellMethod(key = "app:seed-fake-data")
+    private void mock() {
+        makeTrainer();
+        makePrograms();
+        makeStaffs();
+        makeVisionaries();
+        makeMasterLife();
+        makeParticipants();
+    }
+
 
     private void makeTrainer() {
         for (int i = 0; i < 250; i++) {
